Add welcome alert script to home.html
Added a script to display a welcome alert on page load.

--- a/home.html
+++ b/home.html
@@ -11,6 +11,11 @@
 }
 
 	</style>
+	<script>
+    window.onload = function () {
+      alert("Hello! Welcome to Lyne Cosmetics Collection & Manicure Website");
+    };
+  </script>
 	<title></title>
 </head>
 <body>
@@ -67,4 +72,5 @@
 </div>
 
 </body>
+
 </html>
